--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>测试打包出来的文件是否可用</title>
+  <link href="./dist/css/bundle.css" type="text/css" rel="stylesheet" />
   <style>
     html,body,#threejs-sence-container{
       width:100vw;
