--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 <body>
   <!-- 引入封装好的引擎BIMEnginejs -->
   <script src="./dist/BIMEngine.js"></script>
-  <div id="threejs-sence-container"></div>
+	<div class="page-container">
+    <div id="threejs-sence-container"></div>
+  </div>
   <script type="module">
     import { GLTFLoader } from '/public/three/loaders/GLTFLoader.js';//加载GLTF的loader
     import { DRACOLoader } from '/public/three/loaders/DRACOLoader.js'; //解压draco的js
