打包移动端适配

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
     
     let bimEngine = new BIMEngine("threejs-sence-container", null,loader);//创建BIM引擎对象
+		bimEngine.SetBuild = true
     bimEngine.init();//初始化场景
     let pathList = ['qq']
     //加载模型
